Common/GA.Business.DSL/Parsers/ChordParser.fs
namespace GA.Business.DSL.Parsers

open FParsec
open GA.Business.DSL.Types

module ChordParser =
    let pNote = anyOf "CDEFGABcdefgab" |>> string
    
    let pDoubleSharp = (stringReturn "##" DoubleSharp) <|> (stringReturn "x" DoubleSharp) <|> (stringReturn "𝄪" DoubleSharp)
    let pSharp = (stringReturn "#" Sharp) <|> (stringReturn "♯" Sharp)
    let pDoubleFlat = (stringReturn "bb" DoubleFlat) <|> (stringReturn "𝄫" DoubleFlat)
    let pFlat = (stringReturn "b" Flat) <|> (stringReturn "♭" Flat)
    let pNatural = (stringReturn "♮" Natural)
    
    let pAccidental = choice [
        attempt pDoubleSharp
        attempt pDoubleFlat
        pSharp
        pFlat
        pNatural
    ]

    let pQuality = choice [
        // Major — "maj"/"ma" must NOT be followed by a digit so that "maj7", "maj9" etc.
        // are left for pExtension to consume as a whole token.
        attempt (choice [
            // "maj"/"MAJ"/"Maj" must NOT be followed by a digit so "maj7", "maj9" etc.
            // fall through to pExtension which handles them as whole tokens.
            attempt (pstring "maj" .>> notFollowedBy digit >>% Major)
            attempt (pstring "MAJ" .>> notFollowedBy digit >>% Major)
            attempt (pstring "Maj" .>> notFollowedBy digit >>% Major)
            // "M" must not start "Maj7"/"MAJ7", which pExtension reads as a major seventh.
            attempt (pstring "M" .>> notFollowedBy (pstring "aj" <|> pstring "AJ") >>% Major)
            stringReturn "Δ" Major ])
        // Minor — bare "m" must not be the start of "ma" (which belongs to the major family)
        choice [
            stringReturn "min" Minor; stringReturn "MIN" Minor; stringReturn "mi" Minor
            stringReturn "-" Minor
            attempt (pstring "m" .>> notFollowedBy (pstring "a") >>% Minor) ]
        // Dim
        choice [ stringReturn "dim" Diminished; stringReturn "DIM" Diminished; stringReturn "°" Diminished
                 attempt (pstring "o" .>> notFollowedBy (pstring "mit") >>% Diminished) ]
        // Aug
        choice [ stringReturn "aug" Augmented; stringReturn "AUG" Augmented; stringReturn "+" Augmented ]
        // Sus
        choice [ stringReturn "sus" Suspended; stringReturn "SUS" Suspended ]
    ]

    let pExtension = choice [
        // Multi-digit numbers
        attempt (stringReturn "13" (Extension "13"))
        attempt (stringReturn "11" (Extension "11"))
        
        // Complex strings
        attempt (stringReturn "maj7" (Extension "maj7"))
        attempt (stringReturn "maj9" (Extension "maj9"))
        attempt (stringReturn "maj11" (Extension "maj11"))
        attempt (stringReturn "maj13" (Extension "maj13"))
        attempt (stringReturn "Maj7" (Extension "maj7"))
        attempt (stringReturn "MAJ7" (Extension "maj7"))
        attempt (stringReturn "Maj9" (Extension "maj9"))
        attempt (stringReturn "MAJ9" (Extension "maj9"))
        attempt (stringReturn "sus4" (Extension "sus4"))
        attempt (stringReturn "sus2" (Extension "sus2"))
        attempt (stringReturn "m7b5" (Extension "m7b5"))
        attempt (stringReturn "-7b5" (Extension "m7b5"))
        attempt (stringReturn "6/9" (Extension "6/9"))
        attempt (stringReturn "add9" (Extension "add9"))
        attempt (stringReturn "add11" (Extension "add11"))
        attempt (stringReturn "add13" (Extension "add13"))
        attempt (stringReturn "add2" (Extension "add2"))
        attempt (stringReturn "add4" (Extension "add4"))
        
        // Simple ones
        anyOf "796245" |>> (fun c -> Extension (string c))
    ]

    let pAlteration = choice [
        stringReturn "alt" Alt
        stringReturn "ALT" Alt
        pipe2 (opt pAccidental) (choice [ attempt (pstring "13"); attempt (pstring "11"); attempt (pstring "9"); attempt (pstring "5") ]) (fun acc deg -> 
            Alteration(defaultArg acc Natural, deg))
    ]

    /// "omit3", "no5", "(no 3)" (the rendered form).
    let pOmission =
        attempt (
            pipe3
                (choice [ attempt (pstring "(no "); attempt (pstring "(no"); attempt (pstring "omit"); pstring "no" ])
                (pstring "3" <|> pstring "5")
                (opt (pchar ')'))
                (fun _ degree _ -> Omission degree))

    let pChord = 
        pipe5 
            pNote 
            (opt pAccidental) 
            (opt pQuality) 
            (many (pOmission <|> pExtension <|> pAlteration))
            (opt (pstring "/" >>. pipe2 pNote (opt pAccidental) (fun n acc -> (n, defaultArg acc Natural))))
            (fun root acc qual comps bass -> 
                { Root = root.ToUpper(); RootAccidental = defaultArg acc Natural; Quality = qual; Components = comps; Bass = bass })

    let parse chordStr =
        // The whole symbol must parse: an unread suffix such as "sus4" in "C7sus4" is an error, not dropped.
        match run (pChord .>> eof) chordStr with
        | Success(result, _, _) -> Result.Ok result
        | Failure(errorMsg, _, _) -> Result.Error errorMsg
